Conducted hyperparameter tuning via optuna study

--- a/LightGBM-model.ipynb
+++ b/LightGBM-model.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bf9cb035",
+   "id": "187af03d",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:44.904766Z",
-     "iopub.status.busy": "2025-04-25T04:21:44.904478Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.631275Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.630226Z"
+     "iopub.execute_input": "2025-04-25T05:06:27.005739Z",
+     "iopub.status.busy": "2025-04-25T05:06:27.005434Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.136797Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.135891Z"
     },
     "papermill": {
-     "duration": 3.732908,
-     "end_time": "2025-04-25T04:21:48.632615",
+     "duration": 4.137287,
+     "end_time": "2025-04-25T05:06:31.138128",
      "exception": false,
-     "start_time": "2025-04-25T04:21:44.899707",
+     "start_time": "2025-04-25T05:06:27.000841",
      "status": "completed"
     },
     "tags": []
@@ -64,19 +64,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e1e6e3de",
+   "id": "dea884c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.639874Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.639449Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.718545Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.717887Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.145623Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.145193Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.227703Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.226745Z"
     },
     "papermill": {
-     "duration": 0.084219,
-     "end_time": "2025-04-25T04:21:48.720169",
+     "duration": 0.087699,
+     "end_time": "2025-04-25T05:06:31.229288",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.635950",
+     "start_time": "2025-04-25T05:06:31.141589",
      "status": "completed"
     },
     "tags": []
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55978524",
+   "id": "1f4d803f",
    "metadata": {
     "papermill": {
-     "duration": 0.002695,
-     "end_time": "2025-04-25T04:21:48.726032",
+     "duration": 0.002654,
+     "end_time": "2025-04-25T05:06:31.235238",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.723337",
+     "start_time": "2025-04-25T05:06:31.232584",
      "status": "completed"
     },
     "tags": []
@@ -107,19 +107,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ab107a7e",
+   "id": "6a593656",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.732607Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.732319Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.755200Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.754330Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.242098Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.241815Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.262982Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.262112Z"
     },
     "papermill": {
-     "duration": 0.027678,
-     "end_time": "2025-04-25T04:21:48.756470",
+     "duration": 0.026371,
+     "end_time": "2025-04-25T05:06:31.264473",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.728792",
+     "start_time": "2025-04-25T05:06:31.238102",
      "status": "completed"
     },
     "tags": []
@@ -345,19 +345,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d94ebacb",
+   "id": "0ab060b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.763873Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.763566Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.768839Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.768152Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.271898Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.271363Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.276503Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.275661Z"
     },
     "papermill": {
-     "duration": 0.010633,
-     "end_time": "2025-04-25T04:21:48.770402",
+     "duration": 0.010158,
+     "end_time": "2025-04-25T05:06:31.277866",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.759769",
+     "start_time": "2025-04-25T05:06:31.267708",
      "status": "completed"
     },
     "tags": []
@@ -381,19 +381,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ddf35a3",
+   "id": "f71dcd87",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.779489Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.779227Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.784895Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.783913Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.286551Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.285996Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.291112Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.290352Z"
     },
     "papermill": {
-     "duration": 0.010907,
-     "end_time": "2025-04-25T04:21:48.786351",
+     "duration": 0.010151,
+     "end_time": "2025-04-25T05:06:31.292410",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.775444",
+     "start_time": "2025-04-25T05:06:31.282259",
      "status": "completed"
     },
     "tags": []
@@ -417,19 +417,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e092d97d",
+   "id": "feb0ceca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.794132Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.793856Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.803072Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.802330Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.299679Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.299422Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.308057Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.307370Z"
     },
     "papermill": {
-     "duration": 0.014602,
-     "end_time": "2025-04-25T04:21:48.804369",
+     "duration": 0.013563,
+     "end_time": "2025-04-25T05:06:31.309278",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.789767",
+     "start_time": "2025-04-25T05:06:31.295715",
      "status": "completed"
     },
     "tags": []
@@ -464,19 +464,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aec529f0",
+   "id": "c3a34c3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.812254Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.811992Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.818515Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.817753Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.317451Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.317107Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.324156Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.323556Z"
     },
     "papermill": {
-     "duration": 0.011798,
-     "end_time": "2025-04-25T04:21:48.819737",
+     "duration": 0.012432,
+     "end_time": "2025-04-25T05:06:31.325412",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.807939",
+     "start_time": "2025-04-25T05:06:31.312980",
      "status": "completed"
     },
     "tags": []
@@ -510,19 +510,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "95a661f5",
+   "id": "cf84816f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.827112Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.826850Z",
-     "iopub.status.idle": "2025-04-25T04:21:48.866469Z",
-     "shell.execute_reply": "2025-04-25T04:21:48.865657Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.332974Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.332733Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.376006Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.375345Z"
     },
     "papermill": {
-     "duration": 0.04466,
-     "end_time": "2025-04-25T04:21:48.867690",
+     "duration": 0.048671,
+     "end_time": "2025-04-25T05:06:31.377374",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.823030",
+     "start_time": "2025-04-25T05:06:31.328703",
      "status": "completed"
     },
     "tags": []
@@ -723,19 +723,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7f7f7810",
+   "id": "6829c305",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:48.876192Z",
-     "iopub.status.busy": "2025-04-25T04:21:48.875935Z",
-     "iopub.status.idle": "2025-04-25T04:21:49.396202Z",
-     "shell.execute_reply": "2025-04-25T04:21:49.395382Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.386166Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.385408Z",
+     "iopub.status.idle": "2025-04-25T05:06:31.889048Z",
+     "shell.execute_reply": "2025-04-25T05:06:31.888113Z"
     },
     "papermill": {
-     "duration": 0.526139,
-     "end_time": "2025-04-25T04:21:49.397730",
+     "duration": 0.50962,
+     "end_time": "2025-04-25T05:06:31.890727",
      "exception": false,
-     "start_time": "2025-04-25T04:21:48.871591",
+     "start_time": "2025-04-25T05:06:31.381107",
      "status": "completed"
     },
     "tags": []
@@ -768,19 +768,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d25eb76e",
+   "id": "dbe3be29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:49.407299Z",
-     "iopub.status.busy": "2025-04-25T04:21:49.407017Z",
-     "iopub.status.idle": "2025-04-25T04:21:49.927368Z",
-     "shell.execute_reply": "2025-04-25T04:21:49.926321Z"
+     "iopub.execute_input": "2025-04-25T05:06:31.900648Z",
+     "iopub.status.busy": "2025-04-25T05:06:31.900352Z",
+     "iopub.status.idle": "2025-04-25T05:06:32.459681Z",
+     "shell.execute_reply": "2025-04-25T05:06:32.458833Z"
     },
     "papermill": {
-     "duration": 0.527338,
-     "end_time": "2025-04-25T04:21:49.929380",
+     "duration": 0.56697,
+     "end_time": "2025-04-25T05:06:32.462230",
      "exception": false,
-     "start_time": "2025-04-25T04:21:49.402042",
+     "start_time": "2025-04-25T05:06:31.895260",
      "status": "completed"
     },
     "tags": []
@@ -814,19 +814,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7a1aacec",
+   "id": "ef16a2a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:49.942272Z",
-     "iopub.status.busy": "2025-04-25T04:21:49.942003Z",
-     "iopub.status.idle": "2025-04-25T04:21:50.260949Z",
-     "shell.execute_reply": "2025-04-25T04:21:50.260213Z"
+     "iopub.execute_input": "2025-04-25T05:06:32.474978Z",
+     "iopub.status.busy": "2025-04-25T05:06:32.474409Z",
+     "iopub.status.idle": "2025-04-25T05:06:32.831206Z",
+     "shell.execute_reply": "2025-04-25T05:06:32.830535Z"
     },
     "papermill": {
-     "duration": 0.327282,
-     "end_time": "2025-04-25T04:21:50.262548",
+     "duration": 0.364722,
+     "end_time": "2025-04-25T05:06:32.832775",
      "exception": false,
-     "start_time": "2025-04-25T04:21:49.935266",
+     "start_time": "2025-04-25T05:06:32.468053",
      "status": "completed"
     },
     "tags": []
@@ -849,19 +849,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3529ff8c",
+   "id": "99ca624d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:50.274293Z",
-     "iopub.status.busy": "2025-04-25T04:21:50.274018Z",
-     "iopub.status.idle": "2025-04-25T04:21:55.943419Z",
-     "shell.execute_reply": "2025-04-25T04:21:55.942401Z"
+     "iopub.execute_input": "2025-04-25T05:06:32.845759Z",
+     "iopub.status.busy": "2025-04-25T05:06:32.844968Z",
+     "iopub.status.idle": "2025-04-25T05:06:38.904107Z",
+     "shell.execute_reply": "2025-04-25T05:06:38.903116Z"
     },
     "papermill": {
-     "duration": 5.676779,
-     "end_time": "2025-04-25T04:21:55.944864",
+     "duration": 6.067086,
+     "end_time": "2025-04-25T05:06:38.905616",
      "exception": false,
-     "start_time": "2025-04-25T04:21:50.268085",
+     "start_time": "2025-04-25T05:06:32.838530",
      "status": "completed"
     },
     "tags": []
@@ -871,14 +871,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 3.6086843015219637e-06\n"
+      "MSE: 9.642417958885234e-05\n"
      ]
     }
    ],
    "source": [
     "from lightgbm import LGBMRegressor\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "lgm = LGBMRegressor(verbose=-1, random_state=34).fit(X_train, y_train)\n",
+    "lgm = LGBMRegressor(\n",
+    "    n_estimators=3000, \n",
+    "    learning_rate=0.07104980679645698,\n",
+    "    min_split_gain=0.4723933676096186, \n",
+    "    max_depth=8,\n",
+    "    reg_lambda=0.20566922023893597, \n",
+    "    verbose=-1, \n",
+    "    random_state=34,\n",
+    "    early_stopping_rounds=15,\n",
+    "    eval_metric='mse'\n",
+    ").fit(X_train, y_train, eval_set=(X_valid, y_valid))\n",
     "\n",
     "lgm_pred = lgm.predict(X_valid)\n",
     "print(f'MSE: {mean_squared_error(y_valid, lgm_pred)}')"
@@ -887,19 +897,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bdf74b5d",
+   "id": "c12afe2f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-25T04:21:55.957663Z",
-     "iopub.status.busy": "2025-04-25T04:21:55.957097Z",
-     "iopub.status.idle": "2025-04-25T04:21:56.041359Z",
-     "shell.execute_reply": "2025-04-25T04:21:56.040257Z"
+     "iopub.execute_input": "2025-04-25T05:06:38.920850Z",
+     "iopub.status.busy": "2025-04-25T05:06:38.920211Z",
+     "iopub.status.idle": "2025-04-25T05:06:38.965846Z",
+     "shell.execute_reply": "2025-04-25T05:06:38.964778Z"
     },
     "papermill": {
-     "duration": 0.092373,
-     "end_time": "2025-04-25T04:21:56.042976",
+     "duration": 0.054458,
+     "end_time": "2025-04-25T05:06:38.967290",
      "exception": false,
-     "start_time": "2025-04-25T04:21:55.950603",
+     "start_time": "2025-04-25T05:06:38.912832",
      "status": "completed"
     },
     "tags": []
@@ -957,14 +967,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 16.727938,
-   "end_time": "2025-04-25T04:21:56.969893",
+   "duration": 17.896322,
+   "end_time": "2025-04-25T05:06:39.892840",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-04-25T04:21:40.241955",
+   "start_time": "2025-04-25T05:06:21.996518",
    "version": "2.6.0"
   }
  },
