LightGBM with OOF Predictions - correct the code by including the training and prediction inside the loop

--- a/LightGBM-model.ipynb
+++ b/LightGBM-model.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7653de9c",
+   "id": "7050afa8",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:49.461557Z",
-     "iopub.status.busy": "2025-04-26T05:21:49.461212Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.447769Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.446811Z"
+     "iopub.execute_input": "2025-04-28T09:07:34.826298Z",
+     "iopub.status.busy": "2025-04-28T09:07:34.825809Z",
+     "iopub.status.idle": "2025-04-28T09:07:37.991627Z",
+     "shell.execute_reply": "2025-04-28T09:07:37.990851Z"
     },
     "papermill": {
-     "duration": 3.993181,
-     "end_time": "2025-04-26T05:21:53.449240",
+     "duration": 3.170783,
+     "end_time": "2025-04-28T09:07:37.992850",
      "exception": false,
-     "start_time": "2025-04-26T05:21:49.456059",
+     "start_time": "2025-04-28T09:07:34.822067",
      "status": "completed"
     },
     "tags": []
@@ -73,19 +73,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "46333706",
+   "id": "be43aa7c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.457846Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.456934Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.552450Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.551464Z"
+     "iopub.execute_input": "2025-04-28T09:07:37.999117Z",
+     "iopub.status.busy": "2025-04-28T09:07:37.998816Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.135523Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.134907Z"
     },
     "papermill": {
-     "duration": 0.101256,
-     "end_time": "2025-04-26T05:21:53.554063",
+     "duration": 0.141069,
+     "end_time": "2025-04-28T09:07:38.136807",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.452807",
+     "start_time": "2025-04-28T09:07:37.995738",
      "status": "completed"
     },
     "tags": []
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da40d8c",
+   "id": "ac751302",
    "metadata": {
     "papermill": {
-     "duration": 0.002999,
-     "end_time": "2025-04-26T05:21:53.560534",
+     "duration": 0.002288,
+     "end_time": "2025-04-28T09:07:38.141840",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.557535",
+     "start_time": "2025-04-28T09:07:38.139552",
      "status": "completed"
     },
     "tags": []
@@ -116,19 +116,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ed60dd06",
+   "id": "3168b359",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.568082Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.567802Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.591818Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.590820Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.147384Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.147121Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.165679Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.164921Z"
     },
     "papermill": {
-     "duration": 0.029624,
-     "end_time": "2025-04-26T05:21:53.593208",
+     "duration": 0.022727,
+     "end_time": "2025-04-28T09:07:38.166845",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.563584",
+     "start_time": "2025-04-28T09:07:38.144118",
      "status": "completed"
     },
     "tags": []
@@ -354,19 +354,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c143a5c2",
+   "id": "05ffe6ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.603045Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.602727Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.608196Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.607373Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.173797Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.173592Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.177881Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.177177Z"
     },
     "papermill": {
-     "duration": 0.011697,
-     "end_time": "2025-04-26T05:21:53.609743",
+     "duration": 0.009606,
+     "end_time": "2025-04-28T09:07:38.179077",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.598046",
+     "start_time": "2025-04-28T09:07:38.169471",
      "status": "completed"
     },
     "tags": []
@@ -390,19 +390,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fce452a5",
+   "id": "03ee5df2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.617754Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.617474Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.622966Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.621966Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.185018Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.184807Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.188973Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.188309Z"
     },
     "papermill": {
-     "duration": 0.010941,
-     "end_time": "2025-04-26T05:21:53.624217",
+     "duration": 0.008248,
+     "end_time": "2025-04-28T09:07:38.189962",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.613276",
+     "start_time": "2025-04-28T09:07:38.181714",
      "status": "completed"
     },
     "tags": []
@@ -426,19 +426,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "be1aabaf",
+   "id": "dc383857",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.632968Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.632118Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.641734Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.640874Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.196134Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.195919Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.202191Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.201666Z"
     },
     "papermill": {
-     "duration": 0.01556,
-     "end_time": "2025-04-26T05:21:53.643411",
+     "duration": 0.010639,
+     "end_time": "2025-04-28T09:07:38.203311",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.627851",
+     "start_time": "2025-04-28T09:07:38.192672",
      "status": "completed"
     },
     "tags": []
@@ -473,19 +473,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7fbbcf6c",
+   "id": "90a6b313",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.652498Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.651677Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.658886Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.658059Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.209322Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.209130Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.214637Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.214104Z"
     },
     "papermill": {
-     "duration": 0.013149,
-     "end_time": "2025-04-26T05:21:53.660274",
+     "duration": 0.009686,
+     "end_time": "2025-04-28T09:07:38.215692",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.647125",
+     "start_time": "2025-04-28T09:07:38.206006",
      "status": "completed"
     },
     "tags": []
@@ -519,19 +519,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2fa6be23",
+   "id": "d6eda3b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.669068Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.668473Z",
-     "iopub.status.idle": "2025-04-26T05:21:53.709459Z",
-     "shell.execute_reply": "2025-04-26T05:21:53.708712Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.221874Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.221702Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.257521Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.256908Z"
     },
     "papermill": {
-     "duration": 0.046812,
-     "end_time": "2025-04-26T05:21:53.710878",
+     "duration": 0.040167,
+     "end_time": "2025-04-28T09:07:38.258670",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.664066",
+     "start_time": "2025-04-28T09:07:38.218503",
      "status": "completed"
     },
     "tags": []
@@ -732,19 +732,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "864d7145",
+   "id": "8b53a7ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:53.719849Z",
-     "iopub.status.busy": "2025-04-26T05:21:53.719559Z",
-     "iopub.status.idle": "2025-04-26T05:21:54.260800Z",
-     "shell.execute_reply": "2025-04-26T05:21:54.259923Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.265238Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.265063Z",
+     "iopub.status.idle": "2025-04-28T09:07:38.638742Z",
+     "shell.execute_reply": "2025-04-28T09:07:38.638107Z"
     },
     "papermill": {
-     "duration": 0.547311,
-     "end_time": "2025-04-26T05:21:54.262209",
+     "duration": 0.378178,
+     "end_time": "2025-04-28T09:07:38.639922",
      "exception": false,
-     "start_time": "2025-04-26T05:21:53.714898",
+     "start_time": "2025-04-28T09:07:38.261744",
      "status": "completed"
     },
     "tags": []
@@ -769,19 +769,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b47734a4",
+   "id": "e29b1cd8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:54.272753Z",
-     "iopub.status.busy": "2025-04-26T05:21:54.272028Z",
-     "iopub.status.idle": "2025-04-26T05:21:54.795204Z",
-     "shell.execute_reply": "2025-04-26T05:21:54.794212Z"
+     "iopub.execute_input": "2025-04-28T09:07:38.647757Z",
+     "iopub.status.busy": "2025-04-28T09:07:38.647564Z",
+     "iopub.status.idle": "2025-04-28T09:07:39.071084Z",
+     "shell.execute_reply": "2025-04-28T09:07:39.070443Z"
     },
     "papermill": {
-     "duration": 0.530889,
-     "end_time": "2025-04-26T05:21:54.797702",
+     "duration": 0.429627,
+     "end_time": "2025-04-28T09:07:39.073152",
      "exception": false,
-     "start_time": "2025-04-26T05:21:54.266813",
+     "start_time": "2025-04-28T09:07:38.643525",
      "status": "completed"
     },
     "tags": []
@@ -815,49 +815,46 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7f6f3388",
+   "id": "4244bf02",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:54.811022Z",
-     "iopub.status.busy": "2025-04-26T05:21:54.810754Z",
-     "iopub.status.idle": "2025-04-26T05:21:55.147145Z",
-     "shell.execute_reply": "2025-04-26T05:21:55.146408Z"
+     "iopub.execute_input": "2025-04-28T09:07:39.083505Z",
+     "iopub.status.busy": "2025-04-28T09:07:39.083292Z",
+     "iopub.status.idle": "2025-04-28T09:07:43.964780Z",
+     "shell.execute_reply": "2025-04-28T09:07:43.964162Z"
     },
     "papermill": {
-     "duration": 0.345092,
-     "end_time": "2025-04-26T05:21:55.148752",
+     "duration": 4.888111,
+     "end_time": "2025-04-28T09:07:43.966062",
      "exception": false,
-     "start_time": "2025-04-26T05:21:54.803660",
+     "start_time": "2025-04-28T09:07:39.077951",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from sklearn.model_selection import KFold\n",
+    "from lightgbm import LGBMRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "X = train.copy()\n",
     "y = X.pop('ev')\n",
     "X_test = test.copy()\n",
     "\n",
-    "n_folds=5\n",
-    "\n",
-    "kf = KFold(n_splits=n_folds, shuffle=True, random_state=34)\n",
-    "#X_train, X_valid, y_train, y_valid = train_test_split(X, y, train_size=0.8, random_state=34)\n",
-    "for train_index, valid_index in kf.split(X, y):\n",
-    "    X_train, X_valid = X.iloc[train_index], X.iloc[valid_index]\n",
-    "    y_train, y_valid = y.iloc[train_index], y.iloc[valid_index]\n"
+    "oof_lgm = np.zeros(len(y))\n",
+    "test_preds_lgm = np.zeros(len(X_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d2b8f0a",
+   "id": "03e20c7e",
    "metadata": {
     "papermill": {
-     "duration": 0.005533,
-     "end_time": "2025-04-26T05:21:55.160158",
+     "duration": 0.004454,
+     "end_time": "2025-04-28T09:07:43.975454",
      "exception": false,
-     "start_time": "2025-04-26T05:21:55.154625",
+     "start_time": "2025-04-28T09:07:43.971000",
      "status": "completed"
     },
     "tags": []
@@ -869,45 +866,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c8d464df",
+   "id": "21eabc74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:55.173140Z",
-     "iopub.status.busy": "2025-04-26T05:21:55.172517Z",
-     "iopub.status.idle": "2025-04-26T05:21:55.176771Z",
-     "shell.execute_reply": "2025-04-26T05:21:55.175881Z"
+     "iopub.execute_input": "2025-04-28T09:07:43.985616Z",
+     "iopub.status.busy": "2025-04-28T09:07:43.985120Z",
+     "iopub.status.idle": "2025-04-28T09:08:12.860819Z",
+     "shell.execute_reply": "2025-04-28T09:08:12.860009Z"
     },
     "papermill": {
-     "duration": 0.012233,
-     "end_time": "2025-04-26T05:21:55.178107",
+     "duration": 28.882392,
+     "end_time": "2025-04-28T09:08:12.862315",
      "exception": false,
-     "start_time": "2025-04-26T05:21:55.165874",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "oof_lgm = np.zeros(len(y))\n",
-    "test_preds_lgm = np.zeros(len(X_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0c829a20",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-26T05:21:55.191405Z",
-     "iopub.status.busy": "2025-04-26T05:21:55.190661Z",
-     "iopub.status.idle": "2025-04-26T05:22:01.908572Z",
-     "shell.execute_reply": "2025-04-26T05:22:01.907362Z"
-    },
-    "papermill": {
-     "duration": 6.726082,
-     "end_time": "2025-04-26T05:22:01.910007",
-     "exception": false,
-     "start_time": "2025-04-26T05:21:55.183925",
+     "start_time": "2025-04-28T09:07:43.979923",
      "status": "completed"
     },
     "tags": []
@@ -917,48 +888,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.0005187612181640464\n"
+      "Fold 1 RMSE: 0.001093249\n",
+      "Fold 2 RMSE: 0.000975282\n",
+      "Fold 3 RMSE: 0.001048756\n",
+      "Fold 4 RMSE: 0.001018563\n",
+      "Fold 5 RMSE: 0.001096357\n",
+      "Fold 6 RMSE: 0.001089689\n",
+      "Fold 7 RMSE: 0.001019810\n",
+      "Fold 8 RMSE: 0.001069466\n",
+      "Fold 9 RMSE: 0.001048846\n",
+      "Fold 10 RMSE: 0.001038950\n"
      ]
     }
    ],
    "source": [
-    "from lightgbm import LGBMRegressor\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "n_folds=10\n",
+    "kf = KFold(n_splits=n_folds, shuffle=True, random_state=34)\n",
     "\n",
-    "lgm = LGBMRegressor(\n",
-    "    n_estimators=1000, \n",
-    "    learning_rate=0.05, \n",
+    "for fold, (train_index, valid_index) in enumerate(kf.split(X, y)):\n",
+    "    X_train, X_valid = X.iloc[train_index], X.iloc[valid_index]\n",
+    "    y_train, y_valid = y.iloc[train_index], y.iloc[valid_index]\n",
+    "\n",
+    "    lgm = LGBMRegressor(\n",
+    "    n_estimators=3000, \n",
+    "    learning_rate=0.07, \n",
     "    max_depth=4,\n",
-    "    subsample=0.65,\n",
-    "    colsample_bynode=0.4,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bynode=0.9,\n",
     "    verbose=-1, \n",
     "    random_state=34,\n",
     "    early_stopping_rounds=50,\n",
     "    eval_metric='mse'\n",
     ").fit(X_train, y_train, eval_set=[(X_valid, y_valid)])\n",
     "\n",
-    "lgm_pred = lgm.predict(X_valid)\n",
-    "oof_lgm[valid_index] = lgm_pred\n",
+    "    lgm_pred = lgm.predict(X_valid)\n",
+    "    oof_lgm[valid_index] = lgm_pred\n",
     "\n",
-    "print(f'MSE: {mean_squared_error(y, oof_lgm)}')"
+    "    fold_rmse = np.sqrt(mean_squared_error(y_valid, lgm_pred))\n",
+    "    print(f\"Fold {fold + 1} RMSE: {fold_rmse:.9f}\")\n",
+    "    \n",
+    "    test_preds_lgm += lgm.predict(X_test) / n_folds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "a521d8ae",
+   "execution_count": 13,
+   "id": "bd6be979",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-04-26T05:22:01.923243Z",
-     "iopub.status.busy": "2025-04-26T05:22:01.922625Z",
-     "iopub.status.idle": "2025-04-26T05:22:02.233428Z",
-     "shell.execute_reply": "2025-04-26T05:22:02.232498Z"
+     "iopub.execute_input": "2025-04-28T09:08:12.876232Z",
+     "iopub.status.busy": "2025-04-28T09:08:12.875905Z",
+     "iopub.status.idle": "2025-04-28T09:08:12.915539Z",
+     "shell.execute_reply": "2025-04-28T09:08:12.914896Z"
     },
     "papermill": {
-     "duration": 0.318778,
-     "end_time": "2025-04-26T05:22:02.234752",
+     "duration": 0.047646,
+     "end_time": "2025-04-28T09:08:12.916590",
      "exception": false,
-     "start_time": "2025-04-26T05:22:01.915974",
+     "start_time": "2025-04-28T09:08:12.868944",
      "status": "completed"
     },
     "tags": []
@@ -973,7 +960,6 @@
     }
    ],
    "source": [
-    "test_preds_lgm += lgm.predict(X_test) / n_folds\n",
     "sub = pd.read_csv('/kaggle/input/black-jack-smart-effect-of-removal-ml/sample_submission.csv')\n",
     "sub['ev'] = test_preds_lgm\n",
     "sub.to_csv('submission.csv', index=False)\n",
@@ -983,7 +969,7 @@
  ],
  "metadata": {
   "kaggle": {
-   "accelerator": "none",
+   "accelerator": "nvidiaTeslaT4",
    "dataSources": [
     {
      "databundleVersionId": 11195319,
@@ -992,7 +978,7 @@
     }
    ],
    "dockerImageVersionId": 31012,
-   "isGpuEnabled": false,
+   "isGpuEnabled": true,
    "isInternetEnabled": true,
    "language": "python",
    "sourceType": "notebook"
@@ -1016,14 +1002,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 18.620941,
-   "end_time": "2025-04-26T05:22:03.161040",
+   "duration": 42.971914,
+   "end_time": "2025-04-28T09:08:13.538836",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-04-26T05:21:44.540099",
+   "start_time": "2025-04-28T09:07:30.566922",
    "version": "2.6.0"
   }
  },
